[gd_scene load_steps=66 format=2]

[ext_resource path="res://Dialogues/Dialog.tscn" type="PackedScene" id=1]
[ext_resource path="res://assets/Character spriites/Warrior/Idle/0_Warrior_Idle_007.png" type="Texture" id=2]
[ext_resource path="res://assets/Character spriites/Warrior/Idle/0_Warrior_Idle_020.png" type="Texture" id=3]
[ext_resource path="res://assets/Character spriites/Warrior/Idle/0_Warrior_Idle_022.png" type="Texture" id=4]
[ext_resource path="res://assets/Character spriites/Warrior/Idle/0_Warrior_Idle_018.png" type="Texture" id=5]
[ext_resource path="res://assets/Character spriites/Warrior/Idle/0_Warrior_Idle_024.png" type="Texture" id=6]
[ext_resource path="res://assets/Character spriites/Warrior/Idle/0_Warrior_Idle_019.png" type="Texture" id=7]
[ext_resource path="res://assets/Character spriites/Warrior/Idle/0_Warrior_Idle_006.png" type="Texture" id=8]
[ext_resource path="res://assets/Character spriites/Warrior/Idle/0_Warrior_Idle_010.png" type="Texture" id=9]
[ext_resource path="res://assets/Character spriites/Warrior/Idle/0_Warrior_Idle_016.png" type="Texture" id=10]
[ext_resource path="res://assets/Character spriites/Warrior/Idle/0_Warrior_Idle_025.png" type="Texture" id=11]
[ext_resource path="res://assets/Character spriites/Warrior/Idle/0_Warrior_Idle_000.png" type="Texture" id=12]
[ext_resource path="res://assets/Character spriites/Warrior/Idle/0_Warrior_Idle_008.png" type="Texture" id=13]
[ext_resource path="res://assets/Character spriites/Warrior/Idle/0_Warrior_Idle_009.png" type="Texture" id=14]
[ext_resource path="res://assets/Character spriites/Warrior/Idle/0_Warrior_Idle_012.png" type="Texture" id=15]
[ext_resource path="res://assets/Character spriites/Warrior/Idle/0_Warrior_Idle_017.png" type="Texture" id=16]
[ext_resource path="res://assets/Character spriites/Warrior/Idle/0_Warrior_Idle_021.png" type="Texture" id=17]
[ext_resource path="res://assets/Character spriites/Warrior/Idle/0_Warrior_Idle_023.png" type="Texture" id=18]
[ext_resource path="res://assets/Character spriites/Warrior/Idle/0_Warrior_Idle_003.png" type="Texture" id=19]
[ext_resource path="res://assets/Character spriites/Warrior/Idle/0_Warrior_Idle_004.png" type="Texture" id=20]
[ext_resource path="res://assets/Character spriites/Warrior/Idle/0_Warrior_Idle_005.png" type="Texture" id=21]
[ext_resource path="res://assets/Character spriites/Warrior/Idle/0_Warrior_Idle_002.png" type="Texture" id=22]
[ext_resource path="res://assets/Character spriites/Warrior/Idle/0_Warrior_Idle_011.png" type="Texture" id=23]
[ext_resource path="res://assets/Character spriites/Warrior/Idle/0_Warrior_Idle_001.png" type="Texture" id=24]
[ext_resource path="res://assets/Character spriites/Warrior/Idle/0_Warrior_Idle_013.png" type="Texture" id=25]
[ext_resource path="res://assets/Character spriites/Warrior/Idle/0_Warrior_Idle_014.png" type="Texture" id=26]
[ext_resource path="res://assets/Character spriites/Warrior/Idle/0_Warrior_Idle_015.png" type="Texture" id=27]
[ext_resource path="res://assets/Character spriites/Warrior/Idle/0_Warrior_Idle_029.png" type="Texture" id=28]
[ext_resource path="res://assets/Character spriites/Warrior/Idle/0_Warrior_Idle_027.png" type="Texture" id=29]
[ext_resource path="res://assets/Character spriites/Warrior/Idle/0_Warrior_Idle_028.png" type="Texture" id=30]
[ext_resource path="res://assets/Character spriites/Warrior/Idle/0_Warrior_Idle_026.png" type="Texture" id=31]
[ext_resource path="res://Character/Charcters/Knight.gd" type="Script" id=32]
[ext_resource path="res://assets/Character spriites/Warrior/right/0_Warrior_Idle Blinking_015.png" type="Texture" id=33]
[ext_resource path="res://assets/Character spriites/Warrior/right/0_Warrior_Idle Blinking_027.png" type="Texture" id=34]
[ext_resource path="res://assets/Character spriites/Warrior/right/0_Warrior_Idle Blinking_026.png" type="Texture" id=35]
[ext_resource path="res://assets/Character spriites/Warrior/right/0_Warrior_Idle Blinking_007.png" type="Texture" id=36]
[ext_resource path="res://assets/Character spriites/Warrior/right/0_Warrior_Idle Blinking_021.png" type="Texture" id=37]
[ext_resource path="res://assets/Character spriites/Warrior/right/0_Warrior_Idle Blinking_011.png" type="Texture" id=38]
[ext_resource path="res://assets/Character spriites/Warrior/right/0_Warrior_Idle Blinking_006.png" type="Texture" id=39]
[ext_resource path="res://assets/Character spriites/Warrior/right/0_Warrior_Idle Blinking_013.png" type="Texture" id=40]
[ext_resource path="res://assets/Character spriites/Warrior/right/0_Warrior_Idle Blinking_016.png" type="Texture" id=41]
[ext_resource path="res://assets/Character spriites/Warrior/right/0_Warrior_Idle Blinking_009.png" type="Texture" id=42]
[ext_resource path="res://assets/Character spriites/Warrior/right/0_Warrior_Idle Blinking_010.png" type="Texture" id=43]
[ext_resource path="res://assets/Character spriites/Warrior/right/0_Warrior_Idle Blinking_020.png" type="Texture" id=44]
[ext_resource path="res://assets/Character spriites/Warrior/right/0_Warrior_Idle Blinking_022.png" type="Texture" id=45]
[ext_resource path="res://assets/Character spriites/Warrior/right/0_Warrior_Idle Blinking_023.png" type="Texture" id=46]
[ext_resource path="res://assets/Character spriites/Warrior/right/0_Warrior_Idle Blinking_017.png" type="Texture" id=47]
[ext_resource path="res://assets/Character spriites/Warrior/right/0_Warrior_Idle Blinking_025.png" type="Texture" id=48]
[ext_resource path="res://assets/Character spriites/Warrior/right/0_Warrior_Idle Blinking_012.png" type="Texture" id=49]
[ext_resource path="res://assets/Character spriites/Warrior/right/0_Warrior_Idle Blinking_018.png" type="Texture" id=50]
[ext_resource path="res://assets/Character spriites/Warrior/right/0_Warrior_Idle Blinking_003.png" type="Texture" id=51]
[ext_resource path="res://assets/Character spriites/Warrior/right/0_Warrior_Idle Blinking_004.png" type="Texture" id=52]
[ext_resource path="res://assets/Character spriites/Warrior/right/0_Warrior_Idle Blinking_019.png" type="Texture" id=53]
[ext_resource path="res://assets/Character spriites/Warrior/right/0_Warrior_Idle Blinking_024.png" type="Texture" id=54]
[ext_resource path="res://assets/Character spriites/Warrior/right/0_Warrior_Idle Blinking_014.png" type="Texture" id=55]
[ext_resource path="res://assets/Character spriites/Warrior/right/0_Warrior_Idle Blinking_005.png" type="Texture" id=56]
[ext_resource path="res://assets/Character spriites/Warrior/right/0_Warrior_Idle Blinking_008.png" type="Texture" id=57]
[ext_resource path="res://assets/Character spriites/Warrior/right/0_Warrior_Idle Blinking_001.png" type="Texture" id=58]
[ext_resource path="res://assets/Character spriites/Warrior/right/0_Warrior_Idle Blinking_002.png" type="Texture" id=59]
[ext_resource path="res://assets/Character spriites/Warrior/right/0_Warrior_Idle Blinking_028.png" type="Texture" id=60]
[ext_resource path="res://assets/Character spriites/Warrior/right/0_Warrior_Idle Blinking_029.png" type="Texture" id=61]
[ext_resource path="res://assets/Character spriites/Warrior/right/0_Warrior_Idle Blinking_000.png" type="Texture" id=62]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 62 ), ExtResource( 58 ), ExtResource( 59 ), ExtResource( 51 ), ExtResource( 52 ), ExtResource( 56 ), ExtResource( 39 ), ExtResource( 36 ), ExtResource( 57 ), ExtResource( 42 ), ExtResource( 43 ), ExtResource( 38 ), ExtResource( 49 ), ExtResource( 40 ), ExtResource( 55 ), ExtResource( 33 ), ExtResource( 41 ), ExtResource( 47 ), ExtResource( 50 ), ExtResource( 53 ), ExtResource( 44 ), ExtResource( 37 ), ExtResource( 45 ), ExtResource( 46 ), ExtResource( 54 ), ExtResource( 48 ), ExtResource( 35 ), ExtResource( 34 ), ExtResource( 60 ), ExtResource( 61 ) ],
"loop": true,
"name": "right",
"speed": 5.0
}, {
"frames": [ ExtResource( 12 ), ExtResource( 24 ), ExtResource( 22 ), ExtResource( 19 ), ExtResource( 20 ), ExtResource( 21 ), ExtResource( 8 ), ExtResource( 2 ), ExtResource( 13 ), ExtResource( 14 ), ExtResource( 9 ), ExtResource( 23 ), ExtResource( 15 ), ExtResource( 25 ), ExtResource( 26 ), ExtResource( 27 ), ExtResource( 10 ), ExtResource( 16 ), ExtResource( 5 ), ExtResource( 7 ), ExtResource( 3 ), ExtResource( 17 ), ExtResource( 4 ), ExtResource( 18 ), ExtResource( 6 ), ExtResource( 11 ), ExtResource( 31 ), ExtResource( 29 ), ExtResource( 30 ), ExtResource( 28 ) ],
"loop": true,
"name": "Idle",
"speed": 5.0
} ]

[sub_resource type="CapsuleShape2D" id=2]
radius = 42.7848
height = 35.7468

[sub_resource type="CapsuleShape2D" id=3]
radius = 59.4633
height = 37.534

[node name="Knight" type="KinematicBody2D"]
script = ExtResource( 32 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
scale = Vector2( 0.194446, 0.194446 )
frames = SubResource( 1 )
animation = "right"
frame = 2
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 2 )

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 3 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="DialogBox" parent="CanvasLayer" instance=ExtResource( 1 )]
visible = false
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_Area2D_body_exited"]
